Prefer Stream#toList over collect(Collectors.toList())